# aita-core

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
aita_core/: __init__.py  admin.py  app.py  config.py  db.py  ingest.py  oauth_store.py  rag.py  utils.py
docs/: conf.py  deployment.rst  getting-started.rst  index.rst  requirements.txt
docs/_build/: .buildinfo  architecture.html  configuration.html  deployment.html  genindex.html  getting-started.html  google-oauth.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: architecture.doctree  configuration.doctree  deployment.doctree  environment.pickle  getting-started.doctree  google-oauth.doctree  index.doctree  modules.doctree
docs/_build/.doctrees/api/: admin.doctree  app.doctree  config.doctree  db.doctree  ingest.doctree  rag.doctree  utils.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/aita_core/: admin.html  app.html  config.html  db.html  ingest.html  rag.html  utils.html
docs/_build/_sources/: architecture.rst.txt  configuration.rst.txt  google-oauth.rst.txt  modules.rst.txt
docs/_build/_sources/api/: config.rst.txt  rag.rst.txt
docs/_build/api/: admin.html  app.html  config.html  db.html  ingest.html  rag.html  utils.html
docs/api/: admin.rst  app.rst  db.rst  ingest.rst  utils.rst
